--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "3.8.6"
 
 [tool.poetry.dev-dependencies]
 grip = "^4.5.2"
+ansible = "^2.10.4"
+ansible-lint = "^4.3.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
