--- a/ops/ansible/playbook-appserver/roles/base/tasks/ssh.yml
+++ b/ops/ansible/playbook-appserver/roles/base/tasks/ssh.yml
@@ -1,47 +1,54 @@
 ---
 
-# Ref: https://www.raspberrypi.org/documentation/remote-access/ssh/README.md
-- name: Enable SSH when the Pi boots
-  copy:
-    content: ""
-    dest: '/mnt/boot/ssh'
-    group: root
-    owner: root
-    mode: u=rwx,g=rx,u=rx
-  become: true
-
-- name: Create user .ssh directory
-  file:
+- name: Create User .ssh Directory
+  ansible.builtin.file:
     state: directory
-    path: '/mnt/home/pi/.ssh'
-    owner: "{{ user }}"
-    group: "{{ user }}"
-    mode: u=rwx,g=,o=
-  become: true
+    dest: "/home/{{ account.localadmin.username }}/.ssh"
+    mode: u=rwx,g=,o= 
+    owner: "{{ account.localadmin.username }}"
+    group: "{{ account.localadmin.username }}"
+  become: yes
 
-- name: Authorize SSH key
-  copy:
-    content: "{{ ssh_key_stephen.public }}"
-    dest: '/mnt/home/pi/.ssh/authorized_keys'
-    group: "{{ user }}"
-    owner: "{{ user }}"
-    mode: u=rw,g=r,o=r
-  become: true
+- name: Authorize SSH Key
+  ansible.posix.authorized_key:
+    user: "{{ account.localadmin.username }}"
+    key: "{{ account.localadmin.ssh_key.public }}"
+  become: yes
 
-- name: Copy SSH public key
-  copy:
-    content: "{{ ssh_key_stephen.public }}"
-    dest: '/mnt/home/pi/.ssh/id_rsa_io-webdavis.pub'
-    group: "{{ user }}"
-    owner: "{{ user }}"
+- name: Copy SSH Public Key
+  ansible.builtin.copy: 
+    content: "{{ account.localadmin.ssh_key.public }}" 
+    dest: "/home/{{ account.localadmin.username }}/.ssh/id_rsa.pub"
+    owner: "{{ account.localadmin.username }}"
+    group: "{{ account.localadmin.username }}"
     mode: u=rw,g=r,o=r
-  become: true
+  become: yes
 
-- name: Copy SSH private key
-  copy:
-    content: "{{ ssh_key_stephen.private }}"
-    dest: '/mnt/home/pi/.ssh/id_rsa_io-webdavis'
-    group: "{{ user }}"
-    owner: "{{ user }}"
+- name: Create SSH Deamon Config File
+  ansible.builtin.template:
+    src: sshd_config.j2
+    dest: /etc/ssh/sshd_config
+    owner: root
+    group: root
     mode: u=rw,g=r,o=r
-  become: true
+  become: yes
+
+- name: Ensure sshusers Group Exists
+  ansible.builtin.group:
+    name: sshusers
+    state: present
+  become: yes
+
+- name: "Add {{ account.localadmin.username }} to sshusers Group"
+  # This seems redundant with the above sudoers.d entry, but is needed by polkit.
+  ansible.builtin.user:
+    name: "{{ account.localadmin.username }}"
+    groups: sshusers
+    append: yes
+  become: yes
+
+- name: Ensure SSH Daemon Starts at Boot
+  ansible.builtin.service:
+    name: ssh
+    enabled: yes
+  become: yes
