--- a/ops/ansible/playbook-appserver/ansible.cfg
+++ b/ops/ansible/playbook-appserver/ansible.cfg
@@ -1,5 +1,8 @@
 [defaults]
 
+# Path to the Python 3 interpreter, which is used for all module execution.
+interpreter_python = /usr/bin/python3
+
 # Use an inventory file specific to this repo.
 inventory = hosts.ini
 
@@ -12,4 +15,6 @@ log_path = ansible.log
 callback_whitelist = profile_tasks, profile_roles
 
 [ssh_connection]
+# Significantly speeds up Ansible processing. Note: RHEL 7 systems have `requiretty`
+# enabled by default, which will prevent this from working until it's addressed.
 pipelining = True
