--- a/ops/ansible/playbook-appserver/roles/firmware/tasks/uart.yml
+++ b/ops/ansible/playbook-appserver/roles/firmware/tasks/uart.yml
@@ -1,21 +1,16 @@
 ---
 
 - name: Enable Mini UART on GPIO pins 14 (Tx) and 15 (Rx)
-  lineinfile:
-    path: /mnt/boot/config.txt
+  ansible.builtin.lineinfile:
+    path: /boot/config.txt
     line: enable_uart=1
   when: uart.type == 'mini'
 
 # This switches the PL011 UART from the bluetooth controller to GPIO pins 14 (Tx) and 15
 # (Rx), which disables bluetooth on the board.
 - name: Enable PL011 UART on GPIO pins 14 (Tx) and 15 (Rx)
-  lineinfile:
-    path: /mnt/boot/config.txt
+  ansible.builtin.lineinfile:
+    path: /boot/config.txt
     line: btoverlay=disable-bt
-  when: uart.type == 'PL011'
-
-- name: Disable the bluetooth Modems
-  service:
-    name: hciuart
-    enabled: no
+  notify: Disable Bluetooth Modems
   when: uart.type == 'PL011'
