Prevent Ansible Vault password from being printed
Note: in order for this to work, the Ansible Vault password script must be
executable

Closes #36

--- a/ops/ansible/playbook-appserver/ansible.cfg
+++ b/ops/ansible/playbook-appserver/ansible.cfg
@@ -6,7 +6,7 @@ interpreter_python = /usr/bin/python3
 # Use an inventory file specific to this repo.
 inventory = hosts.ini
 
-vault_password_file = vault.password
+vault_password_file = vault.password.py
 
 log_path = ansible.log
 
