Change vars for Stephen's primary dev laptop

--- a/ops/ansible/playbook-appserver/hosts.ini
+++ b/ops/ansible/playbook-appserver/hosts.ini
@@ -1,5 +1,10 @@
-# The local development computer.
-localhost ansible_connection=local
+# Stephen's primary (Linux) laptop.
+ebenezar.netdavis.io ansible_user=stephen private_ip=10.0.0.10 private_ip_interface=enp0s31f6 ansible_port=6040
+
+[vms]
+
+# The Vagrant guest.
+guest ansible_user=vagrant ansible_ssh_host=127.0.0.1 ansible_port=2222 ansible_ssh_private_key_file=.vagrant/machines/default/virtualbox/private_key
 
 [rpis]
 
@@ -8,15 +13,3 @@ atagi.netdavis.io ansible_user=localadmin ansible_ssh_host=10.0.0.4 ansible_port
 
 # Stephen's RPi 4B (4GB) that runs helpful services to assist webdavis.io
 ivy.netdavis.io ansible_user=localadmin ansible_ssh_host=10.0.0.5 ansible_port=6040
-
-[builders]
-
-# The Vagrant guest.
-guest ansible_user=vagrant ansible_ssh_host=127.0.0.1 ansible_port=2222 ansible_ssh_private_key_file=.vagrant/machines/default/virtualbox/private_key
-
-# Stephen's Lenovo ThinkPad P51 laptop; typically running some flavor of Linux.
-ebenezar.netdavis.io ansible_user=stephen private_ip=10.0.0.10 ansible_port=6040
-
-[builders:children]
-
-rpis
